--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -30,3 +30,10 @@
 %h1 Home#index
 %p Find me in app/views/home/index.html.haml
 
+= link_to root_path, class: 'btn btn-success' do
+  .fa.fa-home
+  Homepage
+
+%i.fa-brands.fa-font-awesome
+%i.fa-solid.fa-user-secret
+%i.fa-regular.fa-bell
