Rails generate scaffold course
rails display list in tables

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -30,9 +30,13 @@
 %h1 Home#index
 %p Find me in app/views/home/index.html.haml
 
-= link_to root_path, class: 'btn btn-success' do
+= link_to root_path, class: 'btn btn-success mx-2' do
   .fa.fa-home
   Homepage
+
+= link_to courses_path, class: 'btn btn-success mx-3' do
+  .fa.fa-book
+  Courses
 
 %i.fa-brands.fa-font-awesome
 %i.fa-solid.fa-user-secret
