--- a/app/views/courses/_form.html.haml
+++ b/app/views/courses/_form.html.haml
@@ -5,7 +5,7 @@
 
   .form-inputs
     = f.input :title
-    = f.input :description, as: :rich_text_area
+    = f.rich_text_area :description
 
   .form-actions
     = f.button :submit
