--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -13,7 +13,8 @@
     - @courses.each do |course|
       %tr
         %td= course.title
-        %td= course.description
+        %td
+          = course.description
         %td= link_to 'Show', course
         %td= link_to 'Edit', edit_course_path(course)
         %td= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' }
