--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,11 +1,8 @@
-%script{:crossorigin => "anonymous", :integrity => "sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p", :src => "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"}
-  
 %nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
-  .container-fluid
-    %a.navbar-brand{:href => "#"} My rails app
-    %button.navbar-toggler{"aria-controls" => "navbarScroll", "aria-expanded" => "false", "aria-label" => "Toggle navigation", "data-bs-target" => "#navbarScroll", "data-bs-toggle" => "collapse", :type => "button"}
-      %span.navbar-toggler-icon
-    #navbarSupportedContent.collapse.navbar-collapse
+  %a.navbar-brand{:href => "/"} My rails App
+  %button.navbar-toggler{"aria-controls" => "navbarSupportedContent", "aria-expanded" => "false", "aria-label" => "Toggle navigation", "data-target" => "#navbarSupportedContent", "data-toggle" => "collapse", :type => "button"}
+    %span.navbar-toggler-icon
+  #navbarSupportedContent.collapse.navbar-collapse
     - if current_user
       %ul.navbar-nav.mr-auto
         %li.nav-item{class: "#{'active font-weight-bold' if current_page?(root_path)}"}
@@ -16,7 +13,11 @@
           = link_to courses_path, class: 'nav-link' do
             .fa.fa-book
             Courses
-      
+        %li.nav-item{class: "#{'active font-weight-bold' if current_page?(new_course_path)}"}
+          = link_to new_course_path, class: 'nav-link' do
+            .fa.fa-plus
+            New Course
+
       .form-inline.my-2.my-lg-0
         = form_tag(courses_path, method: :get) do
           .input-group
@@ -24,12 +25,11 @@
             %span.input-group-append
               %button.btn.btn-primary.btn-sm{:type => "submit"}
                 %span.fa.fa-search{"aria-hidden" => "true"}
-     
       %ul.navbar-nav.mr-right
-        %li.nav-item{class: "#{'active font-weight-bold' if current_page?(destroy_user_session_path)}"}
-          = link_to destroy_user_session_path, :method => :delete, class: 'nav-link' do
+        %li.nav-item{class: "#{'active font-weight-bold' if current_page?(root_path)}"}
+          = link_to root_path, class: 'nav-link' do
             .fa.fa-home
-            Logout
+            Another link
         %li.nav-item.dropdown
           %a#navbarDropdown.nav-link.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
             %b= current_user.email
@@ -44,5 +44,3 @@
       %ul.navbar-nav
         %li.nav-item= link_to 'Sign Up', new_user_registration_path, class: 'nav-link'
         %li.nav-item= link_to 'Log In', new_user_session_path, class: 'nav-link'
-  3  
-app/views/layouts/application.html.haml
