Add new fields to Course modal and its validations
display the new fields in the course view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,11 @@
  @import "bootstrap";
  @import "font-awesome";
  @import "./actiontext.scss";
+
+
+// #table1 {
+//   @extend .table, .table-hover, .table-responsive-x1 , .table-bordered, .table-sm,  .bg-white
+// }
+
+ .form-control.is-invalid{background-image: none;}
+ .form-control.is-valid{background-image: none;}
