--- a/app/views/courses/_form.html.haml
+++ b/app/views/courses/_form.html.haml
@@ -6,6 +6,10 @@
   .form-inputs
     = f.input :title
     = f.rich_text_area :description
+    = f.input :short_description
+    = f.input :language, collection: ['English', 'Francais ', 'Swahili', 'Kirundi']
+    = f.input :price
+    = f.input :level, collection: ['Beginner', 'Intermediate', 'Advanced']
 
   .form-actions
     = f.button :submit
