Add ransack gem and install
make add search form to the user's list and course's list

add dunction to the models for to select languages and level

--- a/app/views/courses/_form.html.haml
+++ b/app/views/courses/_form.html.haml
@@ -7,9 +7,9 @@
     = f.input :title
     = f.rich_text_area :description
     = f.input :short_description
-    = f.input :language, collection: ['English', 'Francais ', 'Swahili', 'Kirundi']
+    = f.input :language, collection: Course.languages, include_blank: true
+    = f.input :level, collection: Course.levels, include_blank: true
     = f.input :price
-    = f.input :level, collection: ['Beginner', 'Intermediate', 'Advanced']
 
   .form-actions
     = f.button :submit
