--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -24,7 +24,23 @@
   .card-footer
     Confirmed email?
     - if user.confirmed_at.present?
-      .badge.badge-success yes
+      yes
 
     - else
-      .badge.badge-danger No
+      no
+
+  .card-footer
+    %b= 'sign_in_count'.humanize + ":"
+    = user.sign_in_count
+    .row
+    %b= 'current_sign_in_at'.humanize + ":"
+    = user.current_sign_in_at
+    .row
+    %b= 'last_sign_in_at'.humanize + ":"
+    = user.last_sign_in_at
+    .row
+    %b= 'current_sign_in_ip'.humanize + ":"
+    = user.current_sign_in_ip
+    .row
+    %b= 'last_sign_in_ip'.humanize + ":"
+    = user.last_sign_in_ip
