Add rolify gem and add roles to users

--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -21,6 +21,10 @@
     .row
     = 'last_sign_in_ip'.humanize
     = user.last_sign_in_ip
+    .card-footer
+    - user.roles.each do |role|
+      .fa.fa-user
+        = role.name
   .card-footer
     Confirmed email?
     - if user.confirmed_at.present?
@@ -44,3 +48,4 @@
     .row
     %b= 'last_sign_in_ip'.humanize + ":"
     = user.last_sign_in_ip
+  
