Edit roles for users

--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -49,3 +49,4 @@
     %b= 'last_sign_in_ip'.humanize + ":"
     = user.last_sign_in_ip
   
+  = link_to 'Edit roles', edit_user_path(user), class: 'btn btn-sm btn-warning'
