--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -48,4 +48,10 @@
     .row
     %b= 'last_sign_in_ip'.humanize + ":"
     = user.last_sign_in_ip
+
+  .card-footer
+    - user.roles.each do |role|
+      .badge.badge-info
+        = role.name
   
+  = link_to 'Edit roles', edit_user_path(user), class: 'btn btn-sm btn-warning'
