--- a/app/views/courses/_course.html.haml
+++ b/app/views/courses/_course.html.haml
@@ -9,6 +9,9 @@
     .text-center
       = number_to_currency(course.price)
   .card-footer
+    .fa.fa-book
+      = course.lessons.count
+  .card-footer
     .row
       .col-md-6
         .fa.fa-globe-africa
