--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -24,12 +24,12 @@
           = link_to new_course_path, class: 'nav-link' do
             .fa.fa-plus
             New Course
-        %li.nav-item{class: "#{'active font-weight-bold' if current_page?(home_activity_path)}"}
-          = link_to home_activity_path, class: 'nav-link' do
-            .fa.fa-bell
-            Activities 
+        %li.nav-item{class: "#{'active font-weight-bold' if current_page?(new_course_path)}"}
+          = link_to new_lesson_path, class: 'nav-link' do
+            .fa.fa-plus
+            New Lesson
+       
 
-      
             /SEARCH IN NAVBAR
       = search_form_for @ransack_courses, as: :courses_search, url: courses_path do |f|
         .input-group
@@ -43,6 +43,11 @@
           = link_to root_path, class: 'nav-link' do
             .fa.fa-home
             Another link
+        
+        %li.nav-item{class: "#{'active font-weight-bold' if current_page?(home_activity_path)}"}
+          = link_to home_activity_path, class: 'nav-link' do
+            .fa.fa-bell
+            Activities 
         %li.nav-item.dropdown
           %a#navbarDropdown.nav-link.dropdown-toggle{"aria-expanded" => "false", "aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
             %b= current_user.email
