--- a/app/views/courses/_course.html.haml
+++ b/app/views/courses/_course.html.haml
@@ -20,6 +20,7 @@
         .text-right
           .fa.fa-signal
           = course.level
+
   .card-footer
     .row
       .col-md-6
@@ -28,7 +29,7 @@
       .col-md-6
         .text-right
           .fa.fa-chalkboard-teacher
-          = course.user.username
+          = link_to course.user.username, user_path(course.user)
 
 
   - if current_user
