--- a/app/views/lessons/show.html.haml
+++ b/app/views/lessons/show.html.haml
@@ -1,5 +1,9 @@
--# %p#notice= notice
+%h1 Edit lesson
+
+\/
+= link_to @lesson.course.title, course_path(@lesson.course)
+\/
+= link_to @lesson.title, course_lesson_path(@course, @lesson)
+%p
 
 = render 'lessons/lesson', lesson: @lesson
-
-= link_to 'Back to course', course_path(@lesson.course)
