--- a/app/views/courses/new.html.haml
+++ b/app/views/courses/new.html.haml
@@ -1,7 +1,8 @@
+
 .card
   .card-header
     %h1 New course
   .card-body
     = render 'form'
-    
-= link_to 'Back', courses_path
+  .card-footer
+    = link_to 'Back', courses_path
