--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -29,4 +29,7 @@
     .card-columns
       - @courses.each do |course|
         = render 'courses/course', course: course
+      -# != pagy_nav(@pagy)
+      != pagy_bootstrap_nav(@pagy)
+      
 %br
