--- a/app/views/lessons/edit.html.haml
+++ b/app/views/lessons/edit.html.haml
@@ -1,3 +1,13 @@
+- content_for :title do
+  Some_gems
+  \/
+  Course
+  = @course.title
+  \/
+  Editing lesson
+  = @lesson.title
+
+
 .card
   .card-header
     %h1 Editing lesson
