--- a/app/views/lessons/new.html.haml
+++ b/app/views/lessons/new.html.haml
@@ -1,3 +1,11 @@
+- content_for :title do
+  Some_gems 
+  \/
+  Course
+  = @course.title
+  \/
+  New lesson
+
 .card
   .card-header
     %h1 New lesson
