--- a/app/views/enrollements/edit.html.haml
+++ b/app/views/enrollements/edit.html.haml
@@ -1,7 +1,18 @@
-%h1 Editing enrollement
+- content_for :title do
+  Some_gems
+  \| 
+  Editing 
+  = @enrollement.to_s
 
-= render 'form'
+.card
+  .card-header
+    %h3
+      .fa.fa-lock-open
+      Editing enrollment
 
-= link_to 'Show', @enrollement
-\|
-= link_to 'Back', enrollements_path
+.card-body
+  = render 'form'
+.card-footer
+  = link_to 'Show', @enrollment
+  \|
+  = link_to 'Back', enrollements_path
