--- a/app/views/enrollements/new.html.haml
+++ b/app/views/enrollements/new.html.haml
@@ -1,5 +1,14 @@
-%h1 New enrollement
+- content_for :title do
+  Some_gems 
+  \| 
+  New enrollement
 
-= render 'form'
-
-= link_to 'Back', enrollements_path
+.card
+  .card-header
+    %h3
+      .fa.fa-lock-open
+      New enrollement
+  .card-body
+    = render 'form'
+  .card-footer
+    = link_to 'Back', enrollements_path
