--- a/app/views/courses/_course.html.haml
+++ b/app/views/courses/_course.html.haml
@@ -7,7 +7,7 @@
     %small= simple_format(course.short_description)
   .card-footer
     .text-center
-      = number_to_currency(course.price)
+      = enrollment_button(course)
   .card-footer
     .fa.fa-book
       = course.lessons.count
