--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -12,14 +12,16 @@
 .form-inline
   = search_form_for @q do |f|
     = f.search_field :email_cont, placeholder: 'email'
-    = f.search_field :sign_in_count_eq, placeholder: 'sign in count'
-    = f.search_field :email_or_sign_in_count_eq, placeholder: 'email or sign in count'
+    -# = f.search_field :sign_in_count_eq, placeholder: 'sign in count'
+    -# = f.search_field :email_or_sign_in_count_eq, placeholder: 'email or sign in count'
     = f.submit
   .ml-2
   = link_to 'refresh', users_path
 
-%table.table.table-bordered
-  %thead
+%br
+.table-responsive
+  %table.table.table-bordered.table-striped.table-sm
+    %thead
     %tr
       %th id
       %th= sort_link(@q, :email)
@@ -29,14 +31,32 @@
       %th= 'last_sign_in_at'.humanize
       %th= 'current_sign_in_ip'.humanize
       %th= 'last_sign_in_ip'.humanize
+      %th Confirmed?
+      %th Roles
   %tbody
+
     - @users.each do |user|
+
       %tr
         %td= user.id
-        %td= user.email
+        %td
+          - if user.online?
+            .text-success.far.fa-circle
+          - else
+            .text-danger.far.fa-circle
+          = link_to user.email, user_path(user)
         %td= user.created_at
         %td= user.sign_in_count
         %td= user.current_sign_in_at
         %td= user.last_sign_in_at
         %td= user.current_sign_in_ip
         %td= user.last_sign_in_ip
+        %td= user.confirmed?
+        %td
+          - user.roles.each do |role|
+            .badge.badge-info
+              = role.name
+          - if policy(user).edit?
+            = link_to 'Edit roles', edit_user_path(user), class: 'btn btn-sm btn-warning'
+
+%br
