--- a/app/views/enrollements/index.html.haml
+++ b/app/views/enrollements/index.html.haml
@@ -12,11 +12,29 @@
   %table.table.table-bordered.table-striped.table-sm
     %thead
       %tr
-        %th User
-        %th Course
-        %th Rating
-        %th Review
-        %th Price
+        %th ID
+        %th
+          .fa.fa-user
+          User
+        %th
+          .fa.fa-clock
+          .fa.fa-lock-open
+          bought
+        %th
+          .fa.fa-graduation-cap
+          Course
+        %th 
+          .fa.fa-dollar-sign
+          Price
+        %th 
+          .text-warning.fa.fa-clock
+          Reviewed on
+        %th 
+          .text-warning.fa.fa-star
+          Rating
+        %th 
+          .text-warning.fa.fa-comment
+          Review
         %th
         %th
         %th
@@ -24,13 +42,18 @@
     %tbody
       - @enrollements.each do |enrollement|
         %tr
-          %td= enrollement.user
-          %td= enrollement.course
+          %td= enrollement.id
+          %td= link_to enrollement.user, user_path(enrollement.user)
+          %td= enrollement.created_at.strftime("%d/%b/%Y, %H:%M")
+          %td= link_to enrollement.course, course_path(enrollement.course)
+          %td= number_to_currency(enrollement.price)
+          %td
+            - if enrollement.rating.present?
+              = enrollement.updated_at.strftime("%d/%b/%Y, %H:%M")
           %td= enrollement.rating
           %td= enrollement.review
-          %td= number_to_currency(enrollement.price)
-          %td= link_to 'Show', enrollement
-          %td= link_to 'Edit', edit_enrollement_path(enrollement)
-          %td= link_to 'Destroy', enrollement, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger'
+          %td= link_to 'See Review', enrollement
+          %td= link_to 'Add Review', edit_enrollement_path(enrollement)
+          %td= link_to 'Delete Enrollement', enrollement, method: :delete, data: { confirm: 'Are you sure?' }
 
 = link_to 'New Enrollement', new_enrollement_path
